cmake_minimum_required(VERSION 3.0.0)

if (NOT CMAKE_VERSION VERSION_LESS "3.1")
    cmake_policy(SET CMP0054 NEW)
endif()

project(open3d_conan)

include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

SET(EIGEN3_INCLUDE_DIRS "${CONAN_INCLUDE_DIRS_EIGEN}")
SET(GLEW_INCLUDE_DIRS "${CONAN_INCLUDE_DIRS_GLEW}")
SET(GLEW_LIBRARY_DIRS "${CONAN_LIB_DIRS_GLEW}")
SET(GLEW_LIBRARIES "${CONAN_LIBS_GLEW}")
SET(GLFW_LIBRARY_DIRS "${CONAN_LIB_DIRS_GLFW}")
SET(GLFW_INCLUDE_DIRS "${CONAN_INCLUDE_DIRS_GLFW}")
SET(GLFW_LIBRARIES "${CONAN_LIBS_GLFW}")

MESSAGE(STATUS "Eigen: ${EIGEN3_FOUND} inc: ${EIGEN3_INCLUDE_DIRS}")
MESSAGE(STATUS "GLEW: ${GLEW_FOUND} inc: ${GLEW_INCLUDE_DIRS} lib: ${GLEW_LIBRARIES}")

add_subdirectory(open3d)